--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "native",
+    "module",
+    "lib"
   ],
-  "author": "",
+  "author": "atrox39",
   "license": "",
   "devDependencies": {
     "react-native": "^0.41.2"
